--- a/server/package.json
+++ b/server/package.json
@@ -1,31 +1,26 @@
 {
     "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "tsc && node dist",
-        "dev": "ts-node-dev src/index.ts",
-        "dev2": "nodemon dist",
-        "watch": "tsc -w"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "version": "0.0.1",
+    "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/node": "^17.0.10",
-        "@types/validator": "^13.7.1",
-        "cross-env": "^7.0.3",
-        "nodemon": "^2.0.15",
-        "sequelize-cli": "^6.4.1",
+        "@types/node": "^8.0.29",
+        "ts-node": "3.3.0",
         "ts-node-dev": "^1.1.8",
-        "typescript": "^4.5.5"
+        "typescript": "3.3.3333"
     },
     "dependencies": {
-        "dotenv": "^14.2.0",
-        "express": "^4.17.2",
-        "pg": "^8.7.1",
-        "sequelize": "^6.14.0"
+        "dotenv": "^14.3.2",
+        "express": "^4.15.4",
+        "pg": "^8.4.0",
+        "reflect-metadata": "^0.1.10",
+        "typeorm": "0.2.41"
+    },
+    "scripts": {
+        "start": "tsc && node dist",
+        "watch": "tsc -w",
+        "dev": "nodemon dist",
+        "dev2": "ts-node-dev src/index.ts",
+        "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
     }
 }
