--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "Awesome project developed with TypeORM.",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^8.0.29",
         "ts-node": "3.3.0",
@@ -10,8 +11,10 @@
         "typescript": "3.3.3333"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^14.3.2",
         "express": "^4.15.4",
+        "helmet": "^5.0.2",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.10",
         "typeorm": "0.2.41"
