--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
         "typescript": "3.3.3333"
     },
     "dependencies": {
+        "axios": "^0.25.0",
         "cors": "^2.8.5",
         "dotenv": "^14.3.2",
         "express": "^4.15.4",
