--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^8.0.29",
         "ts-node": "3.3.0",
         "ts-node-dev": "^1.1.8",
@@ -16,6 +17,7 @@
         "dotenv": "^14.3.2",
         "express": "^4.15.4",
         "helmet": "^5.0.2",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.10",
         "typeorm": "0.2.41"
